--- a/src/styles/layout/_main-content.scss
+++ b/src/styles/layout/_main-content.scss
@@ -13,6 +13,10 @@
   }
 }
 .app-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  
   padding: 30px;
   width: 100%;
   height: 100%;
